--- a/.dockerignore
+++ b/.dockerignore
@@ -14,6 +14,9 @@ releases
 # Generate on crash by the VM
 erl_crash.dump
 
+# Static artifacts
+node_modules
+
 # Secret config for prod or local dev-specific work not to be committed.
 config/*.secret.exs
 
