--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # The directory Mix downloads your dependencies sources to.
 /deps/
 
-# Where third-party dependencies like ExDoc output generated docs.
+# Where 3rd-party dependencies like ExDoc output generated docs.
 /doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
@@ -20,10 +20,17 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-smwcbot-*.tar
+smwc-*.tar
 
-# Temporary files, for example, from tests.
-/tmp/
+# Ignore assets that are produced by build tools.
+/priv/static/assets/
+
+# Ignore digested assets cache.
+/priv/static/cache_manifest.json
+
+# In case you use Node.js/npm, you want to ignore these.
+npm-debug.log
+/assets/node_modules/
 
 # Secret config for prod or local dev-specific work not to be committed.
 config/*.secret.exs
